# ffmpegDemo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/ks/ndkdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/ks/ndkdemo/: MainActivity.kt
app/src/test/java/com/ks/ndkdemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
